@@ -10,6 +10,38 @@
 */
 
 /**
+  An adapter for performing resource requests
+
+  The default implementation is a thin wrapper around jQuery.ajax(). It is mixed in to both Ember.Resource
+  and Ember.ResourceController.
+
+  To override Ember.ResourceAdapter entirely, define your own version and include it before this module.
+
+  To override a portion of this adapter, reopen it directly or reopen a particular Ember.Resource or
+  Ember.ResourceController. You can override `_resourceRequest()` entirely, or just provide an implementation of
+  `_prepareResourceRequest(params)` to adjust request params before `jQuery.ajax(params)`.
+*/
+if (Ember.ResourceAdapter === undefined) {
+  Ember.ResourceAdapter = Ember.Mixin.create({
+    /**
+      @private
+
+      Performs an XHR request with `jQuery.ajax()`. Calls `_prepareResourceRequest(params)` if defined.
+    */
+    _resourceRequest: function(params) {
+      params.url = this._resourceUrl();
+      params.dataType = 'json';
+
+      if (this._prepareResourceRequest !== undefined) {
+        this._prepareResourceRequest(params);
+      }
+
+      return jQuery.ajax(params);
+    }
+  });
+}
+
+/**
   A model class for RESTful resources
 
   Extend this class and define the following properties:
@@ -109,20 +141,21 @@ Ember.Resource = Ember.Object.extend({
   },
 
   /**
-    Load via ajax and deserialize
+    Request resource and deserialize
 
     REQUIRED: `id`
   */
   findResource: function() {
     var self = this;
 
-    return this._prepareRequest({type: 'GET'}).done(function(json) {
-      self.deserialize(json);
-    });
+    return this._resourceRequest({type: 'GET'})
+      .done(function(json) {
+        self.deserialize(json);
+      });
   },
 
   /**
-    Create (if new) or update (if existing) record via ajax
+    Create (if new) or update (if existing) record
 
     Will call validate() if defined for this record
 
@@ -145,17 +178,19 @@ Ember.Resource = Ember.Object.extend({
       }
     }
 
-    return this._prepareRequest({type: this.isNew() ? 'POST' : 'PUT', data: this.serialize()}).done(function(json) {
-      // Update properties
-      if (json) self.deserialize(json);
-    });
+    return this._resourceRequest({type: this.isNew() ? 'POST' : 'PUT',
+                                  data: this.serialize()})
+      .done(function(json) {
+        // Update properties
+        if (json) self.deserialize(json);
+      });
   },
 
   /**
-    Delete resource via ajax
+    Delete resource
   */
   destroyResource: function() {
-      return this._prepareRequest({type: 'DELETE'});
+    return this._resourceRequest({type: 'DELETE'});
   },
 
   /**
@@ -188,27 +223,8 @@ Ember.Resource = Ember.Object.extend({
   */
   _resourceId: function() {
     return this.get(this.resourceIdField);
-  },
-
-  /**
-    @private
-    XHR Request params
-  */
-  _requestParams: function(params) {
-    params.url = this._resourceUrl();
-    params.dataType = 'json';
-
-    return params;
-  },
-
-  /**
-    @private
-    Prepare XHR Request
-  */
-  _prepareRequest: function(params) {
-      return jQuery.ajax(this._requestParams(params));
   }
-});
+}, Ember.ResourceAdapter);
 
 /**
   A controller for RESTful resources
@@ -255,20 +271,22 @@ Ember.ResourceController = Ember.ArrayController.extend({
   },
 
   /**
-    Replace this controller's contents with an ajax call to `url`
+    Replace this controller's contents with an request to `url`
   */
   findAll: function() {
     var self = this;
 
-    return this._requestParams({type: 'GET'}).done(function(json) {
-      self.clearAll();
-      self.loadAll(json);
-    });
+    return this._resourceRequest({type: 'GET'})
+      .done(function(json) {
+        self.clearAll();
+        self.loadAll(json);
+      });
   },
+
   /**
     @private
 
-    Base URL for ajax calls
+    Base URL for requests
 
     Will use the `resourceUrl` set for this controller, or if that's missing,
     the `resourceUrl` specified for `resourceType`.
@@ -278,24 +296,5 @@ Ember.ResourceController = Ember.ArrayController.extend({
       return this.get('resourceType').prototype.resourceUrl;
     else
       return this.resourceUrl;
-  },
-
-  /**
-    @private
-    XHR Request params
-  */
-  _requestParams: function(params) {
-    params.url = this._resourceUrl();
-    params.dataType = 'json';
-
-    return params;
-  },
-
-  /**
-    @private
-    Prepare XHR Request
-  */
-  _prepareRequest: function(params) {
-      return jQuery.ajax(this._requestParams(params));
   }
-});
+}, Ember.ResourceAdapter);
