@@ -1,3 +1,6 @@
+*March 22, 2012*
+* Introduced Ember.ResourceAdapter
+
 *March 12, 2012*
 
 * Ember.Resource: added optional resourceIdField
